--- a/IntranetDiskmed/SettingsDebug.config
+++ b/IntranetDiskmed/SettingsDebug.config
@@ -10,4 +10,12 @@
     <login>sa</login>
     <password>Ap32001a@</password>
   </sqlConnection>
+  <smtpConnection>
+    <host>email-ssl.com.br</host>
+    <port>587</port>
+    <ssl>S</ssl>
+    <login>guardian@diskmedpadua.com.br</login>
+    <password>diskmed123***</password>
+    <email>guardian@diskmedpadua.com.br</email>
+  </smtpConnection>
 </configuration>
