--- a/IntranetDiskmed/SettingsDiskmed.config
+++ b/IntranetDiskmed/SettingsDiskmed.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <sqlConnection>
-    <host>CAETESRV003</host>
-    <dataBase>DADOSADV</dataBase>
-    <login>SIGA</login>
-    <password>SIGA</password>
+    <host>DMEDSRV001</host>
+    <dataBase>PROTHEUS_PRD</dataBase>
+    <login>guardian</login>
+    <password>pas*lbeb</password>
   </sqlConnection>
+  <smtpConnection>
+    <host>email-ssl.com.br</host>
+    <port>587</port>
+    <ssl>S</ssl>
+    <login>guardian@diskmedpadua.com.br</login>
+    <password>diskmed123***</password>
+    <email>guardian@diskmedpadua.com.br</email>
+  </smtpConnection>
 </configuration>
